.provarCaches/00D410000011HE0EAM/objects/rstkf__arinvdist__c.object
<CustomObject>
    <description>arinvdist__c</description>
    <fields>
        <fullName>rstkf__arinvdist_arinvtxn__c</fullName>
        <description>arinvdist_arinvtxn__c</description>
        <label>Receivable Transaction</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>Receivable Transaction Distributions</relationshipLabel>
        <relationshipName>arinvdists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_cramt__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_cramtmaint__c</fullName>
        <description>arinvdist_cramtmaint__c</description>
        <inlineHelpText>When the distribution is a Credit, this field carries the amount of the distribution in the Maintenance (Transaction) Currency.</inlineHelpText>
        <label>Credit Amount (Maintenance Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_dimvals__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dimension Values</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>Receivable Transaction Distributions</relationshipLabel>
        <relationshipName>arinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_dramt__c</fullName>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_dramtmaint__c</fullName>
        <description>arinvdist_dramtmaint__c</description>
        <inlineHelpText>When the distribution is a Debit, this field carries the amount of the distribution in the Maintenance (Transaction) Currency.</inlineHelpText>
        <label>Debit Amount (Maintenance Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_drcrind__c</fullName>
        <formula>IF( rstkf__arinvdist_dramt__c  &lt;&gt; 0,  &apos;Debit&apos;,  &apos;Credit&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit or Credit Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Receivable Transaction Distributions</relationshipLabel>
        <relationshipName>arinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Receivable Transaction Distributions</relationshipLabel>
        <relationshipName>arinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Receivable Transaction Distributions</relationshipLabel>
        <relationshipName>arinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_seq__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_source__c</fullName>
        <label>Posting Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arinvdist_syvatclass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the Distribution Detail is created for the VAT portion of a Sales Invoice Line, this field carries the associated VAT Class</inlineHelpText>
        <label>Associated VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>Receivable Transaction Distributions</relationshipLabel>
        <relationshipName>arinvdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arinvdist_arinvtxn__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstkf__arinvdist_seq__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arinvdist_drcrind__c &amp; &apos;-&apos; &amp; rstkf__arinvdist_glacct__r.rstkf__glacct_acct__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Receivable Transaction Distribution</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arinvdist_source__c</columns>
        <columns>rstkf__arinvdist_cramt__c</columns>
        <columns>rstkf__arinvdist_dramt__c</columns>
        <columns>rstkf__arinvdist_glacct__c</columns>
        <columns>rstkf__arinvdist_drcrind__c</columns>
        <columns>rstkf__arinvdist_arinvtxn__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2021 12:00 AM</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Receivable_Transaction_Distributions</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arinvdist_arinvtxn__c</columns>
        <columns>rstkf__arinvdist_glacct__c</columns>
        <columns>rstkf__arinvdist_drcrind__c</columns>
        <columns>rstkf__arinvdist_dramt__c</columns>
        <columns>rstkf__arinvdist_cramt__c</columns>
        <columns>rstkf__arinvdist_gldiv__c</columns>
        <columns>rstkf__arinvdist_glproj__c</columns>
        <columns>rstkf__arinvdist_dimvals__c</columns>
        <columns>rstkf__arinvdist_source__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Receivable Transaction Distributions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receivable Transaction Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>